deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: java-app-deployment
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: java-app-container
        image: image-registry.openshift-image-registry.svc:5000/tinlam-dev/app
        ports:
        - containerPort: 8080
