service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: java-demo
    app.kubernetes.io/instance: java-demo-instance
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: kubectl
  name: java-demo
spec:
  selector:
    app: java-demo
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 8080
