route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: java-app-route
  namespace: ${NAMESPACE}
spec:
  host: ${OPENSHIFT_HOST}
  to:
    kind: Service
    name: java-app-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
